# gauger

./: COPYING  LICENSE  README.md  __main__.py  make_from_yaml.py  pyproject.toml  test_gauge.yaml
docs/: gauge.html  index.html  search.js
docs/gauge/: exporter.html  gauge_make.html  round_gauge.html  scale.html
gauge/: __init__.py  __main__.py  exporter.py  round_gauge.py  scale.py
gui/: application.py  main_window.py
src/gauge/: __init__.py  __main__.py  exporter.py  gauge_make.py  round_gauge.py  scale.py
src/gauger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/gui/: __init__.py  __main__.py  main_window.py
tests/: test_examples.py
tests/clock12/: __main__.py  test.yaml
tests/simple/: __main__.py  test.yaml
